app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - image: ghcr.io/hybridfox/test-app:1.0.2
          name: test-app
          ports:
            - name: web
              containerPort: 80
