app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: infr-argocd
  # annotations:
    # add an annotation indicating the issuer to use.
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  # apisix-ingress-controller is only interested in Ingress
  # resources with the matched ingressClass name, in our case,
  # it's apisix.
  ingressClassName: apisix
  # tls:
  #   - hosts:
  #       - 2048.134.209.139.181.nip.io # placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  #     secretName: 2048-ingress-tls # cert-manager will store the created certificate in this secret.
  rules:
  - host: test.104.155.95.237.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app
            port:
              number: 80
